<resources>
    <string name="app_name">Pocket Vakil</string>
    <string name="splash_text">Ask legal queries and get answers in your mailbox !</string>
    <string name="enter_email">Email address</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up_text">Don\'t have an account ? </string>
    <string name="almost_there">Almost there !</string>
    <string name="confirm_email_sms_link">We have sent a verification link to</string>
    <string name="resend_email">Resend Email </string>
    <string name="update_email">Update Email</string>
    <string name="forgot_password_text">If you have forgot your pasword, enter your registered email. We will send you a code to reset password</string>
    <string name="send_link">Send Link</string>
    <string name="query_title">Case Type</string>
    <string name="sign_up_text_new">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification_text">Enter the one time password you recieved on your email</string>
    <string name="pass_confirm">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_mail">Email address</string>
    <string name="otp_hint">0</string>


    <string name="login_dialog">OK</string>




    <string name="quary_title">Query title</string>
    <string name="quary_specify">Please Specify</string>
    <string name="quary_your_quary">YOUR QUERY</string>
    <string name="quary_whats_your_ques">What\'s your question ?</string>

    <string name="popup_faq">FAQs</string>
    <string name="popup_switch_to_hindi">Switch to Hindi</string>
    <string name="popup_logout">Logout</string>
    <string name="quary_send">Send</string>
    <string name="quary_Case_Type">Case Type</string>
    <string name="quary_Commercial_Contract_Law">Commercial/Contract Law</string>
    <string name="quary_Constitutional_Law">Constitutional Law</string>
    <string name="quary_Criminal_Law">Criminal Law</string>
    <string name="quary_Family_Law">Family Law</string>
    <string name="quary_Intellectual_Property_Rights">Intellectual Property Rights</string>
    <string name="quary_International_Law">International Law</string>
    <string name="quary_Matrimonial_Dispute">Matrimonial Dispute</string>
    <string name="quary_Property_Law">Property Law</string>
    <string name="quary_Tax_Law">Tax Law</string>
    <string name="quary_another">Any other, please specify</string>
    <string name="quary_TC">I agree to Terms &amp; Conditions</string>




   <!-- font name-->


    <string name="OpenSans_Light">OpenSans_Light</string>
    <string name="OpenSans_Reguler">OpenSans_Reguler</string>
    <string name="OpenSans_Semibold">OpenSans_Semibold</string>
    <string name="title_activity_faq__question">Faq_Question</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_faq__question__extend_">FAQ_Question_Extend_Activity</string>
    <string name="title_activity_terms__condition_">Terms_Condition_Activity</string>
</resources>
