<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rel_forgot"
    android:background="@color/app_white">

    <com.app.pocketvakil.custom.CustomTextView
        android:id="@+id/tv_forgot_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textColor="@color/text_hint_color"
        android:layout_marginLeft="20dp"
        app:font="@string/OpenSans_Light"
        android:layout_marginRight="20dp"

        android:text="@string/forgot_password_text"
        android:textSize="16sp"/>

    <com.app.pocketvakil.custom.CustomEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgot_text"
        android:imeOptions="actionDone"
        android:hint="@string/sign_up_mail"
        android:gravity="center"
        android:textSize="20sp"
        android:textColorHint="@color/text_hint_color"
        android:singleLine="true"
        android:maxLength="50"
        app:font="@string/OpenSans_Reguler"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/forgot_password_margin"
        android:layout_marginRight="@dimen/forgot_password_margin"
        android:textColor="@color/app_blue"
        android:layout_marginTop="@dimen/forgot_password_email_margin_top"/>

    <View
        android:id="@+id/email_view"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginLeft="@dimen/forgot_password_margin"
        android:layout_marginRight="@dimen/forgot_password_margin"
        android:background="@color/app_blue"/>

    <Button
        android:id="@+id/bt_send_link"
        android:layout_below="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_grey_button"
        android:layout_centerHorizontal="true"
        android:text="@string/send_link"
        android:textColor="@color/white"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/send_link_top_margin"/>

</RelativeLayout>
