<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/rel_confrm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white">

    <com.app.pocketvakil.custom.CustomTextView
        android:id="@+id/tv_almost_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_blue"
        app:font="@string/OpenSans_Semibold"
        android:text="@string/almost_there"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_above="@+id/tv_sms_link"
        android:layout_marginBottom="@dimen/almost_there_margin_bottom"
        android:textSize="@dimen/confirm_email_almost_text_size"/>

    <com.app.pocketvakil.custom.CustomTextView
        android:id="@+id/tv_sms_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_resend_email"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginBottom="@dimen/sms_link_margin_bottom"
        android:textColor="@color/app_blue"
        android:text="@string/confirm_email_sms_link"
        android:gravity="center"
        android:textSize="18sp"/>
    <com.app.pocketvakil.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mail"
        app:font="@string/OpenSans_Reguler"
        android:gravity="center"
        android:layout_marginBottom="13dp"
        android:textColor="@color/app_blue"
        android:textSize="18sp"
        android:layout_above="@+id/rl_resend_email"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/rl_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/rl_update_email"
        android:layout_centerHorizontal="true">
        <com.app.pocketvakil.custom.CustomTextView
            android:id="@+id/tv_resend_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_email"
            app:font="@string/OpenSans_Light"
            android:layout_centerHorizontal="true"
            android:textColor="@color/splash_text"
            android:textSize="@dimen/resend_email_text_size"
        />
        <View
            android:layout_below="@+id/tv_resend_email"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@color/splash_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_update_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_next_arrow"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/update_email_margin_bottom">
       <!-- <TextView
            android:id="@+id/tv_update_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_email"
            android:layout_centerHorizontal="true"
            android:textColor="@color/splash_text"
            android:textSize="@dimen/resend_email_text_size"
            />
        <View
            android:layout_below="@+id/tv_update_email"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@color/splash_text"/>-->
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_next_arrow"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arrow_button"
        android:layout_marginBottom="@dimen/confirm_email_arrow_bottom_margin"/>
</RelativeLayout>