<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/relative_signUp_root"
    android:layout_height="match_parent"
    android:background="@color/app_white">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/rel1"
        android:layout_above="@+id/et_name"
        android:layout_marginTop="15dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_logo"
        android:layout_centerInParent="true"

         />

    </RelativeLayout>

    <com.app.pocketvakil.custom.CustomEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:layout_above="@+id/iv_name_view"
        android:textColor="@color/app_blue"
        android:singleLine="true"
        android:hint="@string/sign_up_name"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left"
        android:gravity="center"
        android:textColorHint="@color/text_hint_color"
        android:background="@null"
        android:textSize="20sp"
        app:font="@string/OpenSans_Reguler"
        />

    <View
        android:id="@+id/iv_name_view"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_above="@+id/et_email_address"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/app_blue"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left">
    </View>


    <com.app.pocketvakil.custom.CustomEditText
        android:id="@+id/et_email_address"
        android:layout_above="@+id/iv_email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:background="@null"
        android:hint="@string/sign_up_mail"
        app:font="@string/OpenSans_Reguler"
        android:gravity="center"
        android:textColor="@color/app_blue"
        android:textColorHint="@color/text_hint_color"
        android:imeOptions="actionNext"
        android:textSize="20sp"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left"/>

    <View
        android:id="@+id/iv_email_view"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_above="@+id/et_password"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/app_blue"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left">
    </View>

    <com.app.pocketvakil.custom.CustomEditText
        android:id="@+id/et_password"
        android:layout_above="@+id/iv_pass_view"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="20sp"
        android:textColor="@color/app_blue"
        android:layout_centerHorizontal="true"
        app:font="@string/OpenSans_Reguler"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint_color"
        android:background="@null"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left"
        />

    <View
        android:id="@+id/iv_pass_view"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_above="@+id/tv_login"
        android:layout_marginLeft="@dimen/sign_up_view_margin_left"
        android:layout_marginRight="@dimen/sign_up_view_margin_left"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="40dp"
        android:background="@color/app_blue">
    </View>

    <RelativeLayout
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/iv_pass_view"
        android:layout_toRightOf="@+id/et_password"
        android:layout_toEndOf="@+id/et_password"
        android:layout_marginLeft="-40dp"
        android:id="@+id/rel_showsignUppwd"
        android:layout_marginBottom="0dp"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_pwdshow"
            android:layout_centerInParent="true"

            android:src="@drawable/eye_grey"
            />


    </RelativeLayout>



    <com.app.pocketvakil.custom.CustomTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_grey_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/sign_up_button_bottom_margin"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        app:font="@string/OpenSans_Semibold"
        android:paddingBottom="10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/login_email_text"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>